fix padding on mobile

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -401,6 +401,9 @@ body {
         li {
             padding: 0;
         }
+        li.child {
+            padding: 15px;
+        }
     }
 
     ul.bottom {
